Mon Apr 13 21:59:24 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSC/Parser.cpp:
        * XSC/Parser.hpp:
        * XSC/XSC_BE.mpc:
        * XSC/utils/XML_Schema_Resolver.h:
        * XSC/utils/XML_Schema_Resolver.cpp:
        * XSC/utils/XSC_Utils.mpc:
        * XSCRT/XSCRT/XML.hpp:
        * default.features:

          . Added support for both xerces2 and xerces3.

        * XSC/utils/XML_Schema_Resolver_T.cpp:

          Removed this file.

Sun Jan 11 03:09:11 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSC.mwc:
        * XSC/XSC.mpc:
        * XSC/xsc.cpp:

          . Moved the remaining source files and project into the XSC
            subdirectory.

        * XSC.mpc:
        * xsc.cpp:

          Removed these files.

Sun Dec 28 08:15:19 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/xscrt.mpb:

          . Removed the 'xscrt' features requirement.

Tue Dec 23 18:37:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/utility.mpb:

          . Inserted block to include the correct libraries on non-Windows
            systems.

        * XSC/utils/XML_Schema_Resolver.h:
        * XSCRT/XMLSchema/Types.hpp:
        * XSCRT/XSCRT/Elements.hpp:

          . Fixed compile warnings on non-Windows systems.

Tue Dec 23 18:25:03 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/xscrt.mpb:

          . Remove the XSCRT library since the runtime library is composed
            of template classes.

Tue Dec 23 18:20:39 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSCRT/XSCRT/utils/Buffer_Reader_T.h:
        * XSCRT/XSCRT/utils/Buffer_Reader_T.cpp:

          . Fix compilation errors in the templates.

Sat Dec 20 17:27:51 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * XSC/utils/XML_Schema_Resolver.h:
        * XSC/utils/XML_Schema_Resolver.cpp:

          . Update the Basic_Resolver to allow setting of the path after